# qzlt

./: .gitignore  README.md  pyproject.toml  scripts.py
demo/: info.json  terms.txt
quiz/: cards.py  main.py  sessions.py  sets.py  utils.py
qzlt/: cards.py  main.py  sessions.py  sets.py  utils.py
test/: test_session.py  test_set.py
tests/: test_card.py  test_session.py
