[tool.poetry]
name = "quizli"
version = "0.1.0"
description = "A flashcard CLI application"
authors = ["Calvin Cheng <calvin.cc.cheng@gmail.com>"]

[tool.poetry.scripts]
quiz = "qzlt.main:app"

[tool.poetry.dependencies]
python = "^3.6.2"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
